# logical-formula-to-ats

./: .gitignore  CMakeLists.txt  README.md
grammars/: Formula.g4  TypeAnnotationList.g4
src/: PredicateCheckerVisitor.cpp  PredicateCheckerVisitor.h  Symbol.cpp  Symbol.h  TypeChecker.cpp  TypeChecker.h  main.cpp
